Issue #3043306 by WidgetsBurritos, vessel_adrift: URLs overlapping

--- a/css/web_page_archive.admin.css
+++ b/css/web_page_archive.admin.css
@@ -22,3 +22,7 @@
   background: #f0f0f0;
   padding: 15px;
 }
+
+.wpa-captured-url {
+  word-wrap: break-word;
+}
